[#101] refactor: jpa entity 도메인 모듈 내부로 이동